<resources>
    <string name="app_name">CognitiveTest</string>
    <string name="title_activity_login">login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="hint_login_username">username</string>
    <string name="hint_login_pwd">password</string>
    <string name="loginbtntext">LOGIN</string>
    <string name="forgot_pwd">Forget Password</string>
    <string name="loading">Loading...</string>
    <string name="error_field_required">This field is required</string>

    <string name="hint_login_btn">LOGIN</string>
    <string name="hint_login_reg">Register as a clinician</string>
    <string name="hint_login_remPWD">  Remember Password</string>
    <string name="todo">TODO</string>
    <string name="hint_login_switchon">Don\'t save password</string>
    <string name="hint_login_swithcoff">Save password</string>
    <string name="hint_login_loading">Logging in</string>
    <string name="hint_login_pwdEditField"> Password</string>
    <string name="hint_login_usernameEditField"> Username</string>

    <string name="continue_text">Now please hand the tablet to the clinician.</string>
    <string name="introduction_text">On the next screen you will see a design
        at the top half of the screen and
        blank space in the bottom half. Using the pen,
        please copy the design in the blank space. Please copy the figure as carefully as you can. </string>
    <string name="video_info_getData">Fetching data, please wait.</string>
    <string name="home_select_existing">HISTORY</string>
    <string name="home_create_new">NEW PARTICIPANT</string>
    <string name="home_title">Dashboard</string>
    <string name="intro_title">Introduction</string>
    <string name="intro_continue">CONTINUE</string>
    <string name="intro_read">READ</string>


    <string-array name="all_languages">
        <item>Participant ID</item>
        <item>Participant First Name</item>
        <item>Participant Family Name</item>
        <item>Participant Date of Birth</item>
    </string-array>

</resources>
